Remove download PNG, keep only copy to clipboard

--- a/index.html
+++ b/index.html
@@ -1145,13 +1145,9 @@
                             <div class="legend-item"><div class="legend-dot sd"></div> Strongly Disagree</div>
                         </div>
                         <div class="chart-actions">
-                            <button class="chart-action-btn" onclick="downloadChart('familyChart', 'family-survey-overview')">
-                                <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
-                                Download PNG
-                            </button>
                             <button class="chart-action-btn" onclick="copyChartToClipboard('familyChart')">
                                 <svg viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                                Copy
+                                Copy to Clipboard
                             </button>
                         </div>
                     </div>
@@ -1168,13 +1164,9 @@
                         <div class="question-stats" id="familyQuestionStats">
                         </div>
                         <div class="chart-actions">
-                            <button class="chart-action-btn" onclick="downloadChart('familySingleChart', 'family-question-detail')">
-                                <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
-                                Download PNG
-                            </button>
                             <button class="chart-action-btn" onclick="copyChartToClipboard('familySingleChart')">
                                 <svg viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                                Copy
+                                Copy to Clipboard
                             </button>
                         </div>
                     </div>
@@ -1265,13 +1257,9 @@
                             <div class="legend-item"><div class="legend-dot sd"></div> Strongly Disagree</div>
                         </div>
                         <div class="chart-actions">
-                            <button class="chart-action-btn" onclick="downloadChart('facultyChart', 'faculty-survey-overview')">
-                                <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
-                                Download PNG
-                            </button>
                             <button class="chart-action-btn" onclick="copyChartToClipboard('facultyChart')">
                                 <svg viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                                Copy
+                                Copy to Clipboard
                             </button>
                         </div>
 
@@ -1295,13 +1283,9 @@
                         <div class="question-stats" id="facultyQuestionStats">
                         </div>
                         <div class="chart-actions">
-                            <button class="chart-action-btn" onclick="downloadChart('facultySingleChart', 'faculty-question-detail')">
-                                <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
-                                Download PNG
-                            </button>
                             <button class="chart-action-btn" onclick="copyChartToClipboard('facultySingleChart')">
                                 <svg viewBox="0 0 24 24"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                                Copy
+                                Copy to Clipboard
                             </button>
                         </div>
                     </div>
