Add pop-out hover effect to Emerging Insights cards

--- a/index.html
+++ b/index.html
@@ -557,12 +557,16 @@
             border-radius: 12px;
             padding: 1.1rem;
             margin-bottom: 1rem;
-            border: 1px solid rgba(212, 160, 18, 0.2);
-            transition: border-color 0.2s;
+            border: 1px solid rgba(40, 170, 225, 0.2);
+            transition: all 0.25s ease;
+            cursor: default;
         }
 
         .insight-card:hover {
-            border-color: var(--accent-gold);
+            border-color: #28AAE1;
+            transform: translateY(-3px) scale(1.02);
+            box-shadow: 0 8px 20px rgba(40, 170, 225, 0.15);
+            background: #FFFFFF;
         }
 
         .insight-card:last-child {
