Update title to Breaking Ground Schools Spring Survey Dashboard with gold color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Pulse | School Climate Dashboard</title>
+    <title>Breaking Ground Schools | Spring Survey Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -126,10 +126,11 @@
 
         h1 {
             font-family: 'Fraunces', serif;
-            font-weight: 500;
-            font-size: 1.4rem;
-            letter-spacing: -0.02em;
-            color: white;
+            font-weight: 600;
+            font-size: 1.2rem;
+            letter-spacing: -0.01em;
+            color: #F5C842;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
         .status-bar {
@@ -1170,7 +1171,7 @@
                         <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                     </svg>
                 </div>
-                <h1>Survey Pulse</h1>
+                <h1>Breaking Ground Schools Spring Survey Dashboard</h1>
             </div>
             <div class="status-bar">
                 <div class="live-indicator">
