--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             font-weight: 600;
             font-size: 1.2rem;
             letter-spacing: -0.01em;
-            color: #F5C842;
+            color: white;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
